force-app/main/default/objects/Expense_Rate_Slab__c/Expense_Rate_Slab__c.object-meta.xml
<CustomObject>
    <description>Rate configuration and distance slabs for expense eligibility rules. Stores per-mode rates and distance-based slab rates.</description>
    <label>Expense Rate Slab</label>
    <nameField>
        <displayFormat>ERS-{0000}</displayFormat>
        <label>Slab Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Rate Slabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>