force-app/main/default/objects/Expense_Rate_Slab__c/fields/Expense_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Expense_Eligibility__c</fullName>
    <description>Parent eligibility rule</description>
    <label>Expense Eligibility</label>
    <referenceTo>Expense_Eligibility__c</referenceTo>
    <relationshipLabel>Rate Slabs</relationshipLabel>
    <relationshipName>Expense_Rate_Slabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>