force-app/main/default/objects/Expense_Rate_Slab__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <description>Maximum cap per trip/day for Actual rate type modes</description>
    <label>Max Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>