force-app/main/default/objects/Expense_Rate_Slab__c/fields/Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Amount__c</fullName>
    <description>Per-KM rate for distance-based modes</description>
    <label>Rate Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>