force-app/main/default/objects/Expense_Rate_Slab__c/validationRules/Distance_From_Less_Than_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Distance_From_Less_Than_To</fullName>
    <active>true</active>
    <description>Distance From must be less than Distance To when both are specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Distance_From__c)),
    NOT(ISBLANK(Distance_To__c)),
    Distance_From__c >= Distance_To__c
)</errorConditionFormula>
    <errorDisplayField>Distance_To__c</errorDisplayField>
    <errorMessage>Distance To must be greater than Distance From.</errorMessage>
</ValidationRule>