force-app/main/default/objects/Expense_Rate_Slab__c/validationRules/Distance_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Distance_Non_Negative</fullName>
    <active>true</active>
    <description>Distance From and Distance To must be non-negative.</description>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(Distance_From__c)), Distance_From__c &lt; 0),
    AND(NOT(ISBLANK(Distance_To__c)), Distance_To__c &lt; 0)
)</errorConditionFormula>
    <errorDisplayField>Distance_From__c</errorDisplayField>
    <errorMessage>Distance values must be non-negative.</errorMessage>
</ValidationRule>