force-app/main/default/objects/Expense_Rate_Slab__c/validationRules/Rate_Amount_Required_For_Per_KM.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Amount_Required_For_Per_KM</fullName>
    <active>true</active>
    <description>Rate Amount is required when Rate Type is Per KM.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Rate_Type__c, "Per KM"),
    OR(ISBLANK(Rate_Amount__c), Rate_Amount__c = 0)
)</errorConditionFormula>
    <errorDisplayField>Rate_Amount__c</errorDisplayField>
    <errorMessage>Rate Amount is required when Rate Type is Per KM.</errorMessage>
</ValidationRule>