force-app/main/default/objects/Expense_Rate_Slab__c/validationRules/Sort_Order_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Sort_Order_Positive</fullName>
    <active>true</active>
    <description>Sort Order must be a positive number when specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Sort_Order__c)),
    Sort_Order__c &lt; 1
)</errorConditionFormula>
    <errorDisplayField>Sort_Order__c</errorDisplayField>
    <errorMessage>Sort Order must be a positive number.</errorMessage>
</ValidationRule>