force-app/main/default/objects/Expense_Rate_Slab__c/validationRules/Travel_Mode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Travel_Mode_Required</fullName>
    <active>true</active>
    <description>Travel Mode is required on every rate slab record.</description>
    <errorConditionFormula>ISBLANK(Travel_Mode__c)</errorConditionFormula>
    <errorDisplayField>Travel_Mode__c</errorDisplayField>
    <errorMessage>Travel Mode is required.</errorMessage>
</ValidationRule>